added floating and adhesive labels

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -189,8 +189,12 @@ img {
   text-decoration: underline;
 }
 
-/* Input focus sticky top label */
 .login__input:focus + .login__label {
+  top: -12px;
+  font-size: var(--small-font-size);
+}
+
+.login__input:not(:placeholder-shown).login__input:not(:focus) + .login__label {
   top: -12px;
   font-size: var(--small-font-size);
 }
